Add SourceSet to liquibase classpath

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,3 @@
 spring:
   liquibase:
-    change-log: db/changelog/changelog-master.xml
+    change-log: classpath:db/changelog/changelog-master.xml
