--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.3.RELEASE")
+        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.0.3.RELEASE'
     }
 }
 
@@ -28,25 +28,30 @@ repositories {
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile("org.liquibase:liquibase-core")
-    compile("com.h2database:h2")
-    liquibaseRuntime('org.liquibase:liquibase-core:3.6.2')
-    liquibaseRuntime('org.liquibase.ext:liquibase-hibernate5:3.6')
-    liquibaseRuntime('mysql:mysql-connector-java:5.1.46')
-    liquibaseRuntime("org.springframework.boot:spring-boot:2.0.1.RELEASE")
-    liquibaseRuntime('org.springframework:spring-orm:5.0.5.RELEASE')
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'org.liquibase:liquibase-core'
+    compile 'com.h2database:h2'
+    liquibaseRuntime 'org.liquibase:liquibase-core:3.6.2'
+    liquibaseRuntime 'org.liquibase.ext:liquibase-hibernate5:3.6'
+    liquibaseRuntime 'mysql:mysql-connector-java:5.1.46'
+    liquibaseRuntime 'org.springframework.boot:spring-boot:2.0.1.RELEASE'
+    liquibaseRuntime 'org.springframework:spring-orm:5.0.5.RELEASE'
+    liquibaseRuntime sourceSets.main.output
 }
+
+diff.dependsOn compileJava
+diffChangeLog.dependsOn compileJava
 
 liquibase {
     activities {
         main {
             driver 'com.mysql.jdbc.Driver'
-            url 'jdbc:mysql://localhost:3306/my_database'
+            url 'jdbc:mysql://127.0.0.1:3306/my_database'
             username 'myUsername'
             password 'myPassword'
             changeLogFile 'src/main/resources/db/changelog/changelog-master.xml'
-            referenceUrl 'hibernate:spring:my.company' +
+            referenceUrl 'hibernate:spring:de.bobek' +
                     '?dialect=org.hibernate.dialect.MySQL5Dialect' +
                     '&hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy' +
                     '&hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy'
