--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,14 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.0.3.RELEASE'
+        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.1.0.RELEASE'
     }
 }
 
 plugins {
     id 'java'
     id 'idea'
-    id 'io.franzbecker.gradle-lombok' version '1.14'
-    id 'org.liquibase.gradle' version '2.0.0'
+    id 'org.liquibase.gradle' version '2.0.1'
 }
 
 apply plugin: 'org.springframework.boot'
@@ -34,9 +33,10 @@ dependencies {
     compile 'com.h2database:h2'
     liquibaseRuntime 'org.liquibase:liquibase-core:3.6.2'
     liquibaseRuntime 'org.liquibase.ext:liquibase-hibernate5:3.6'
-    liquibaseRuntime 'mysql:mysql-connector-java:5.1.46'
-    liquibaseRuntime 'org.springframework.boot:spring-boot:2.0.1.RELEASE'
-    liquibaseRuntime 'org.springframework:spring-orm:5.0.5.RELEASE'
+    liquibaseRuntime 'mysql:mysql-connector-java'
+    liquibaseRuntime 'org.springframework.boot:spring-boot'
+    liquibaseRuntime 'org.springframework:spring-orm'
+    liquibaseRuntime 'javax.xml.bind:jaxb-api'
     liquibaseRuntime sourceSets.main.output
 }
 
@@ -46,8 +46,8 @@ diffChangeLog.dependsOn compileJava
 liquibase {
     activities {
         main {
-            driver 'com.mysql.jdbc.Driver'
-            url 'jdbc:mysql://127.0.0.1:3306/my_database'
+            driver 'com.mysql.cj.jdbc.Driver'
+            url 'jdbc:mysql://127.0.0.1:3306/my_database?useSSL=false&allowPublicKeyRetrieval=true'
             username 'myUsername'
             password 'myPassword'
             changeLogFile 'src/main/resources/db/changelog/changelog-master.xml'
