--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'org.liquibase:liquibase-core'
     compile 'com.h2database:h2'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
     liquibaseRuntime 'org.liquibase:liquibase-core'
     liquibaseRuntime 'org.liquibase.ext:liquibase-hibernate5:3.6'
     liquibaseRuntime 'mysql:mysql-connector-java'
