--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,7 @@ insert_final_newline = true
 end_of_line = lf
 trim_trailing_whitespace = true
 continuation_indent_size = 4
+max_line_length = 120
 
 [*.{java, gradle}]
 indent_size = 4
