--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,13 @@
 plugins {
-    id 'org.springframework.boot' version '2.4.2'
+    id 'org.springframework.boot' version '2.6.6'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
-    id 'idea'
-    id 'org.liquibase.gradle' version '2.0.4'
+    id 'org.liquibase.gradle' version '2.1.1'
 }
 
 group 'de.bobek'
 version '1.0-SNAPSHOT'
-
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
@@ -27,12 +24,12 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     liquibaseRuntime 'org.liquibase:liquibase-core'
-    liquibaseRuntime 'org.liquibase.ext:liquibase-hibernate5:3.6'
+    liquibaseRuntime 'org.liquibase.ext:liquibase-hibernate5:4.5.0'
     liquibaseRuntime 'mysql:mysql-connector-java'
     liquibaseRuntime 'org.springframework.boot:spring-boot'
     liquibaseRuntime 'org.springframework:spring-orm'
     liquibaseRuntime 'javax.xml.bind:jaxb-api'
-    liquibaseRuntime 'ch.qos.logback:logback-classic:1.2.3' // Fix for https://liquibase.jira.com/browse/CORE-3212
+    liquibaseRuntime 'org.hibernate:hibernate-core'
     liquibaseRuntime sourceSets.main.output
 }
 
